# Python_App_That_Generates_Logs_Metrics_Traces

./: Dockerfile  Grafana_Dashboard.json  README.md  docker-compose.local.yml  kubernetes_cluster_configuration.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/handlers/: business.py  frontend.py  health.py  simulation.py
app/middleware/: logging.py  metrics.py  tracing.py
app/models/: customer.py  order.py  product.py
app/observability/: __init__.py  instrumentation.py  logging.py  metrics.py  tracing.py
app/services/: database.py  downstream_client.py  store.py  traffic_generator.py
app/utils/: helpers.py
helm/: alloy-values.yaml
k8s/: configmap.yaml  deployment.yaml  postgres-deployment.yaml  postgres-secret.yaml  postgres-service.yaml  service.yaml
my_observability_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
